--- a/components/order.html
+++ b/components/order.html
@@ -27,7 +27,7 @@
 <body class="bg-light">
 
     <!-- Header Section -->
-    <header>
+    <!-- <header>
         <div class="container bg-light">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
@@ -40,7 +40,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                    <ul class="nav d-flex ml-auto">
+                    <ul class="nav d-flex">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Beranda</a>
                         </li>
@@ -53,18 +53,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="kontak.html">Kontak</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link cara-pesan" href="./order.html">Cara Pemesanan</a>
-                        </li>
                     </ul>
-                </div>
-                <!-- Cart -->
-<<<<<<< HEAD:components/order.html
-                <button type="button" class="btn btn-warning cart-btn md ml-4 mr-auto" data-toggle="modal" data-target="#cart">
-                    <!-- <h5 class="cart-title">keranjang(<span class="total-count"></span>)</h5> -->
-=======
-                <!-- <button type="button" class="btn btn-warning cart-btn md ml-4 mr-auto" data-toggle="modal" data-target="#cart">
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
+                </div> -->
+
+    <!-- Cart -->
+    <!-- <button type="button" class="btn btn-warning cart-btn md ml-4 mr-auto" data-toggle="modal" data-target="#cart">
                     <svg width="0.8em" height="0.8em" viewBox="0 0 16 16" class="bi bi-bag-fill" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -82,17 +75,10 @@
                         <path fill-rule="evenodd"
                             d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z" />
                     </svg>
-<<<<<<< HEAD:components/order.html
-                </button>
-
-                <!-- Cart Modal -->
-                <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-=======
                 </button> -->
 
-                <!-- Cart Modal -->
-                <!-- <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
+    <!-- Cart Modal -->
+    <!-- <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
                         <div class="modal-content">
@@ -120,92 +106,79 @@
                             </div>
                         </div>
                     </div>
-<<<<<<< HEAD:components/order.html
-                </div>
-                <!-- end of cart modal -->
-                <!-- end of cart -->
-=======
                 </div> -->
-                <!-- end of cart modal -->
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
-            </nav>
+    <!-- end of cart modal -->
+    <!-- end of cart -->
+    <!-- </nav>
         </div>
-    </header>
+    </header> -->
     <!-- End of Header -->
 
     <!-- Section of Cara Order -->
-    <section class="cara-order">
+    <section class="order-checkout">
         <div class="container">
-            <div class="row">
-<<<<<<< HEAD:components/order.html
-                <div class="col-sm-4 col-md-4">
-=======
-                <div class="col-sm-4 col-md-4 justify-content-center">
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
-                    <img src="../assets/img/logo.png" class="img-fluid img-logo-order" alt="" srcset="">
-                </div>
-                <div class="col-sm-8 col-md-8 cara-order">
-                    <h3 class="title-cara-order">
-                        Cara Order
-                    </h3>
-<<<<<<< HEAD:components/order.html
-                    <p class="lead">
-
-                    </p>
-=======
-                    <p class="lead artikel-order">
-                        Untuk pemesanan produk dari Tiyok Food, silakan untuk terlebih dahulu mengisi form berikut:
-                    </p>
-                    <label for="nama">Template Form Pemesanan</label>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon3">Nama</span>
-                        </div>
-                        <input type="text" class="form-control" id="nama" aria-describedby="basic-addon3"  placeholder="Budi Setiawan">
-                    </div>               
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon3">Alamat</span>
-                        </div>
-                        <input type="text" class="form-control" id="nama" aria-describedby="basic-addon3"  placeholder="Jalan Rawa Belong No. 15, Sukabumi Barat, Kebon Jeruk, Jakarta Barat. 11121">
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon3">Pesanan & Jumlah</span>
-                        </div>
-                        <input type="text" class="form-control" id="nama" aria-describedby="basic-addon3" placeholder="Kacang Atom 120gr 2X, Kacang Kriuk 120gr 4X">
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon3">No Telepon</span>
-                        </div>
-                        <input type="text" class="form-control" id="nama" aria-describedby="basic-addon3"  placeholder="08997711225">
-                    </div>
-                    <div class="artikel-whatsapp">
-                        <div class="row">
-                            <div class="col-sm-2 col-md-2 text-center">
-                                <img src="../assets/img/whatsapp.svg" class="img-order-whatsapp" alt="" srcset="">
-                            </div>
-                            <div class="col-sm-10 col-md-10">
-                                <p class="lead artikel-kirim-whatsapp">
-                                    setelah membuat form seperti diatas, kirimkan form pengiriman tersebut via <em>Whatsapp</em>
-                                    ke nomor: <span class="nomor-wa">0813 1515 5522</span>
-                                </p>
-                                <p class="lead artikel-kirim-whatsapp">
-                                    admin akan segera membalas pemesanan Anda, dengan harga total pesanan anda ditambahkan ongkos kirim ke tujuan anda serta tata cara pembayaran ke rekening resmi Tiyok <em>Food</em>. terimakasih.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
-                </div>
+            <div class="order-header text-center">
+                <img src="../assets/img/logo.png" class="img-fluid img-logo-order" alt="" srcset="">
             </div>
+            <h5 class="total-checkout">
+                Total Rp <span id="total-belanja"></span>
+            </h5>
+            <form class="form-order">
+                <div class="form-group">
+                    <label for="nama">Nama</label>
+                    <input type="text" class="form-control" id="nama">
+                </div>
+                <div class="form-group">
+                    <label for="alamat">Alamat</label>
+                    <input type="text" class="form-control" id="alamat">
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="provinsi">Provinsi</label>
+                            <select class="form-control" id="provinsi">
+                                <option>1</option>
+                                <option>2</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="kota">Kota</label>
+                            <select class="form-control" id="kota">
+                                <option>1</option>
+                                <option>2</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <div class="form-group">
+                            <label for="telepon">Nomor Telepon</label>
+                            <input type="text" class="form-control" id="telepon">
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <label for="kode-pos">Kode Pos</label>
+                            <input type="text" class="form-control" id="kode-pos">
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Pesan</button>
+                <a href="../components/produk.html">
+                    <button class="btn btn-secondary kembali">
+                        kembali
+                    </button>
+                </a>
+            </form>
         </div>
     </section>
     <!-- End of Section -->
 
     <!-- footer -->
-    <footer class="footer-tiyok">
+    <!-- <footer class="footer-tiyok">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3">
@@ -252,26 +225,22 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <a href="http://twitter.com/tiyokfood">
-                                        <img src="../assets/img/twitter.svg" width="32" height="auto"
-                                            alt="Twitter Icon">
+                                        <img src="../assets/img/twitter.svg" width="32" height="auto" alt="Twitter Icon">
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="http://facebook.com/tiyokfood">
-                                        <img src="../assets/img/facebook.svg" width="32" height="auto"
-                                            alt="Facebook Icon">
+                                        <img src="../assets/img/facebook.svg" width="32" height="auto" alt="Facebook Icon">
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="http://instagram.com/tiyokfood">
-                                        <img src="../assets/img/instagram.svg" width="32" height="auto"
-                                            alt="Instagram Icon">
+                                        <img src="../assets/img/instagram.svg" width="32" height="auto" alt="Instagram Icon">
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="http://youtube.com">
-                                        <img src="../assets/img/youtube.svg" width="32" height="auto"
-                                            alt="Youtube Icon">
+                                        <img src="../assets/img/youtube.svg" width="32" height="auto" alt="Youtube Icon">
                                     </a>
                                 </div>
                             </div>
@@ -292,7 +261,7 @@
                 &copy; Copyright 2020. Tiyok <em>Food</em>. All Right Reserved
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -311,12 +280,13 @@
             easing: 'ease'
         });
     </script>
-<<<<<<< HEAD:components/order.html
-    <script src="../script.js">
-    </script>
     <script src="../js/cart.js"></script>
-=======
->>>>>>> 130febd8698a78650f72e8f78b1d4d8d392a3109:components/order.html
+    <script>
+        'use strict';
+        function cartValues () {
+            document.getElementById('total-belanja').innerText = localStorage.getItem('cart');
+        };
+    </script>
 </body>
 
 </html>
